# XUnity_Translate_Server

./: .gitignore  .pylintrc  AGENTS.md  README-ja.md  README.md  pyproject.toml
.github/: copilot-instructions.md
src/trans_server/: main.py
src/trans_server/data_models/: __init__.py  provider_config.py
src/trans_server/mods/: __init__.py  prompt_builder.py  text_filter.py  translation_server.py
src/trans_server/providers/: __init__.py  anthropic_compatible_provider.py  anthropic_provider.py  base_provider.py  gemini_provider.py  ollama_provider.py  openai_compatible_provider.py  openai_provider.py
src/trans_server/utils/: __init__.py  language_mapper.py
